--- a/Report/Report.tex
+++ b/Report/Report.tex
@@ -21,7 +21,7 @@
   Justin Krueger\footnote{Mathematics, Virginia Tech University},
   Alistair Bentley\footnote{Mathematics, Clemson University},
   Tianyu Qiu\footnote{Mathematics, University of Delaware},
-  Siadeep Nannapaneni\footnote{Mathematics,Vanderbilt University},
+  Saideep Nannapaneni\footnote{Civil & Environmental Engineering,Vanderbilt University},
   Jiahua Jiang\footnote{Mathematics, University of Massachusetts Dartmouth },
   Tim Hodges\footnote{Mathematics, Colorado State University}
 \end{center}
