Adding more to the Outline.

--- a/Outline/Outline.tex
+++ b/Outline/Outline.tex
@@ -110,6 +110,10 @@
 		
 		\item There are material attributes
 		
+		\item Work done on the design given uncertainty in an acceleration switch, IMECE2011 paper.
+		
+		\item
+		
 
 		
 	\end{enumerate}
@@ -152,6 +156,8 @@
 	\end{enumerate}
 	
 \section{Workflow}
+	 \begin{center}\includegraphics[scale=.5]{IMSM_Workflow.png}\end{center}
+
 \subsection{Feasibility}
 	\begin{enumerate}
 		\item 
