--- a/Outline/Outline.tex
+++ b/Outline/Outline.tex
@@ -104,13 +104,13 @@
 	\end{enumerate}
 	
 	\section{Helical Compression Springs}
-		
+	\begin{enumerate}
 		\item Work done on the design given uncertainty in an acceleration switch, IMECE2011 paper.
 		
-		\item
+	\end{enumerate}	
 		
 
-Helical springs are a large class of springs sharing the common characteristic of a coiled appearence (see figure).  Below is a list of a spring's key design parameters.
+Helical springs are a large class of springs sharing the common characteristic of a coiled appearance (see figure).  Below is a list of a spring's key design parameters.
 
 		\begin{enumerate}
 			\item Spring's inner diameter $d_{i}$ 
@@ -177,11 +177,11 @@ d_{w} + 3 d_{w}^{2})}{d_{i}(d_{i}+d_{w})^{3}}] < UTS
 				
 		\item Constraint vs. Objective
 	
-		\item 
+		\item A constraint is an expression that must satisfy an inequality or equality condition.
 		
-		\item 
+		\item An objective is an expression that can be evaluated.
 		
-		\item 
+		\item So an constraint can be an objective. 
 		
 	\end{enumerate}
 	
