Updated Outline files.

--- a/Outline/Outline.tex
+++ b/Outline/Outline.tex
@@ -104,10 +104,12 @@
 	\end{enumerate}
 	
 	\section{Helical Compression Springs}
+	
+	\begin{enumerate}
 		
 		\item Work done on the design given uncertainty in an acceleration switch, IMECE2011 paper.
 		
-		\item
+	\end{enumerate}
 		
 
 Helical springs are a large class of springs sharing the common characteristic of a coiled appearence (see figure).  Below is a list of a spring's key design parameters.
