Adding more to outline

--- a/Outline/MyBib.bib
+++ b/Outline/MyBib.bib
@@ -6,4 +6,14 @@
  edition = {First}
 }
 
+@article{Paredes,
+    author  = {M. Paredes and M. Sartor and A. Daidie},
+    title   = {Advanced assistance tool for optimal compression spring design},
+    year    = {2005},
+    journal = {Engineering with Computers},
+    volume  = {14},
+    number  = {3},
+    pages   = {342--351}
+}
+
 
