--- a/Report/MyBib.bib
+++ b/Report/MyBib.bib
@@ -1,2 +1,58 @@
+@book {Wahl,
+ author = {A. M. Wahl},
+ publisher = {Penton Publishing},
+ title = {Mechanical Springs},
+ year = {1944},
+ edition = {First}
+}
+
+@article{Paredes,
+    author  = {M. Paredes and M. Sartor and A. Daidie},
+    title   = {Advanced Assistance Tool for Optimal Compression Spring Design},
+    year    = {2005},
+    journal = {Engineering with Computers},
+
+}
+
+@article{Reliability,
+    author  = {A. M. Naga Phani Sastry and B. K. Devaki Devi and K. Hemachandra Reddy and K. Madhava Reddy and V. Satish Kumar},
+    title   = {Reliability Based Design Optimization of Helical Compression Spring using Probabilisitic Response Surface Methodology },
+    year    = {2012},
+    journal = {International Conference On Advances in Engineering},
+
+}
+
+@article{Robust,
+    author  = {Hong Zhao and Gang Chen and Jun-zhe Zhou},
+    title   = {The Robust Optimization Design for Cylindrical Helical Compression Spring},
+    year    = {2012},
+    journal = {Advanced Materials Research},
+    volume  = {433-440},
+    publisher = {Trans Tech Publications}
+
+}
+
+@article{Relaxation1,
+    author  = {M. J. Siegel and D. P. Athans},
+    title   = {Relaxation of Compression Springs at High Temperatures},
+    year    = {1970},
+    journal = {Transactions of the ASME},
+}
+
+@article{Relaxation2,
+    author  = {V. Geinitz and M. Weib and U. Kletzin and P. Beyer},
+    title   = {Relaxation of Helical Springs and Spring Steel Wire},
+    year    = {2011},
+    journal = {56th International Scientific Colloquium},
+}
+
+@article{Relaxation3,
+    author  = {V. Kobelev},
+    title   = {Relaxation and Creep in Twist and Flexure},
+    year    = {2014},
+    journal = {Multidiscipline Modeling in Materials and Structures},
+}
+
+
 
 
