Outline and Report updated

--- a/Report/MyBib.bib
+++ b/Report/MyBib.bib
@@ -53,6 +53,14 @@
     journal = {Multidiscipline Modeling in Materials and Structures},
 }
 
+@article{IMSM2010,
+    author  = {M. R. Brake and J.E. Mossad and B. Beheshti and J. Davis and R.C. Smith and K. Chowdhary and S. Wang},
+    title   = {Uncertainty Enable Design of an Acceleration Switch},
+    year    = {2011},
+    journal = {Proceedings of ASME 2011 International Mechanical Engineering Congress and Exposition},
+}
+
+
 
 
 
