--- a/Report/Report.tex
+++ b/Report/Report.tex
@@ -72,17 +72,28 @@ For example, consider an acceleration switch in \ref{Acceleration Switch}.
 		 \label{Acceleration Switch}
 		 
 		 \end{figure}
-		 
-This switch is used in high acceleration testing. The use is  to only record information at crucial times of the test. For this reason when a certain force is exerted on the switch the two at both ends will connect. When this happens we have a circuit that will enable data collection. It is important that the switch does not open too soon or too late otherwise the data collection will be too large or mean too little.This is just one example of a switch that we must know the best spring to make the performance maximal. 
+\textbf{Describe problem, approach, and summarize contribution and results.}
+This switch is used in high acceleration testing. The use is to only record information at crucial times of the test. For this reason when a certain force is exerted on the switch the pins at both ends will connect. When this happens we have a circuit that will enable data collection. It is important that the switch does not open too soon or too late otherwise the data collection will be too large or mean too little.This is just one example of a switch that we must know the best spring to make the performance maximal. For a more in depth look at this example look at \cite{IMSM2010}
 
-Given that a switch may be used in a myriad of ways, it is important that one can find an optimal spring given the use known. This leads to an optimization problem. Even more this leads to an optimization problem that requires the flexibility to allow how a spring is determined to be optimal by an objective function and constraints determining the optimization problem to be changed. This does not consider the fabrication constraints that exist during manufacturing, but also needs to be considered as well. 
+Given that a switch may be used in a myriad of ways, it is important that one can find an optimal spring given after the use of the spring is known. This leads to an optimization problem. Even more this leads to an optimization problem that requires the flexibility to allow how a spring is determined to be optimal by an objective function and constraints. This does not consider the fabrication constraints that exist during manufacturing, but also needs to be considered as well. 
+
+Given any constraint or objective function it will depend on a set of variables. This dependence will change when a constraint or objective function changes. In optimization we only wish to concern ourselves with the state variables that are allowed to change during optimization. For this reason, we construct a spring object that will hold all attributes of a spring and we can pull the relevant variables when it is determined what they are. 
+
+In addition to this spring object, to reduce the uncertainty of the problem we conduct a sensitivity analysis of the objective function subject to the constraints and variables given. This allows the user to reduce the state variables if it is determined that the set of variables given has insensitive variables. 
+
+A main contribution of this work is the framework to add constraints and objectives that may be unknown at the point of this paper. In parallel to this we have built a framework that is flexible enough to address the issue of unknown constraints and objectives. \textbf{ADD!}
 
 
+\textbf{review history and existing literature}
+Designing an optimal spring is not a new problem. In 2010 at the SAMSI IMSM workshop a team considered the design of an acceleration with enabled uncertainty. This approach lead to a paper \cite{IMSM2010}. This is not the only approach to uncertainty, in \cite{Reliability} probabilistic response surface methodology was implemented to investigate the complications of uncertainty in designing a spring. In addition to these types of approaches it is possible to narrow focus to a single parameter, in \cite{Robust} they focus on the spring stiffness. 
 
-Designing an optimal spring is not a new problem, see \cite{Paredes} \cite{Reliability} \cite{Robust} \cite{Wahl}. In 2010 at the SAMSI IMSM workshop a team considered the design of an acceleration with enabled uncertainty. 
+Our approach is not limited to an acceleration switch, instead it is but a special case of our approach. In \cite{Paredes} they attempt to design an optimal spring, with the introduction of a sizing tool. All references listed are informed to some extent by \cite{Wahl}. We do not focus on a set of parameters or attempt to fix the uncertainty of the spring design problem initially. We attempt to allow any possible construction of a spring optimization possible. 
+
+This does not rule out if a construction is not physically or mathematically invalid. We will dispose of that case when we are unable to find a feasible point for optimization within our feasibility check. In summary, we need to allow any possible construction of a spring design problem, and adjust accordingly. 
 
 
-In this paper we will give a description of the springs of interest, Helical Compression Springs. Next, the formulation of the problem, and the approach taken to the problem. Following will be a section on workflow with descriptions of each step in the workflow. Lastly, we will discuss a few case studies given the framework constructed and a summary with future work that can be worked on.
+\textbf{outline}
+In this paper we will give a description of the springs of interest, helical compression springs. Next, the formulation of the problem, and the approach taken to the problem. Following will be a section on workflow with descriptions of each step in the workflow. Lastly, we will discuss a few case studies given the framework constructed and a summary with future work that can be worked on.
 
 
 
@@ -182,11 +193,18 @@ A list of possible constraints/objectives given in minimization form is below
 \item$-UTS + \frac{G(L_{free} - L_{hard})}{4 \pi N_{a} (ec)} \left[\frac{d_{w} (4d_{i}^{2} + 9.46d_{i} 
 d_{w} + 3 d_{w}^{2})}{d_{i}(d_{i}+d_{w})^{3}}\right] < 0$
 %\item Relaxation
-
-
 \end{enumerate}	
 
-In addition to these we could minimize given to any attribute of the spring.
+\textbf{ADD RELAXATION HERE!}
+
+
+In addition to these we should be able to minimize any attribute of the spring. 
+
+In order to simplify the problem we have made some assumptions. First, we have assumed that constraints and objectives are all in terms of the number of total coils. This is to reduce the complexity of knowing if a constraint is dependent on the active number or total number of coils. These two numbers are dependent on the end conditions of the spring, whether it is open or closed at the end. For simplicity we also will consider all springs to be have a closed end condition. 
+
+With these assumptions we simplify our constraints for pitch, $p$, solid length, $L_{solid}$, and the diametral expansion, $d_{expand}$. 
+
+\textbf{JUSTIFY ASSUMPTIONS}
 
 \section{The Problem}
 \begin{itemize}
