--- a/Report/MyBib.bib
+++ b/Report/MyBib.bib
@@ -6,6 +6,14 @@
  edition = {First}
 }
 
+@book {OOP,
+ author = {Peter Coad and Jill Nicola},
+ publisher = {P T R Prentice Hall},
+ title = {Object Oriented Programming},
+ year = {1993},
+ edition = {}
+}
+
 @article{Paredes,
     author  = {M. Paredes and M. Sartor and A. Daidie},
     title   = {Advanced Assistance Tool for Optimal Compression Spring Design},
