Ran more cases and worked more on the report.

--- a/Report/MyBib.bib
+++ b/Report/MyBib.bib
@@ -11,7 +11,7 @@
  publisher = {P T R Prentice Hall},
  title = {Object Oriented Programming},
  year = {1993},
- edition = {}
+ edition = {First}
 }
 
 @article{Paredes,
